= 1.3.8 = * Fix: If you have uploaded a photo in portrait or landscape then the plugin will now display the square cropped version of the photo in your feed
git-svn-id: https://plugins.svn.wordpress.org/instagram-feed/trunk@1269862 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/sb-instagram-admin.css
+++ b/css/sb-instagram-admin.css
@@ -146,6 +146,10 @@
 }
 
 /* Pro only notices */
+#sbi_admin .sbi_row{
+	display: block;
+	width: 100%;
+}
 #sbi_admin .sbi_pro,
 #sbi_admin .sbi_pro label{
 	color: #999 !important;
