--- a/css/sb-instagram.css
+++ b/css/sb-instagram.css
@@ -83,6 +83,8 @@
 }
 #sb_instagram .sbi_photo{
   display: block;
+  text-decoration: none;
+  height: 200px;
 }
 #sb_instagram a,
 #sb_instagram a:hover,
